--- a/yamls/joomla.yaml
+++ b/yamls/joomla.yaml
@@ -1,3 +1,59 @@
+# CVE-2006-0303 1.0.7   OSVDB:22531,22532,22533,2253422535 SA18513
+# CVE-2006-1047 1.0.8   OSBDB:31287 SA19105
+# CVE-2006-1048 1.0.8   OSVDB:23822 SA19105
+# CVE-2006-1049 1.0.8   OSVDB:23819 SA19105
+# CVE-2006-1028 1.0.8   OSVDB:23817 SA19105
+# CVE-2006-1030 1.0.8   OSVDB:23818 SA19105
+# CVE-2006-7247 1.0.10  OSVDB:26626 SA20746
+# CVE-2006-3480 1.0.10  OSVDB:26913,26917,26918
+# CVE-2006-4468 1.0.11  OSVDB:28339,28343 http://www.joomla.org/content/view/1841/78/ http://www.joomla.org/content/view/1843/74/
+# CVE-2006-4471 1.0.11  OSVDB:28353 SA21666 http://www.joomla.org/content/view/1841/78/ http://www.joomla.org/content/view/1843/74/
+# CVE-2006-4472 1.0.11  OSVDB:28347 SA21666 http://www.joomla.org/content/view/1841/78/ http://www.joomla.org/content/view/1843/74/
+# CVE-2006-4474 1.0.11  OSVDB:28348,28349,28350,28351 SA21666 http://www.joomla.org/content/view/1841/78/ http://www.joomla.org/content/view/1843/74/
+# CVE-2006-4476 1.0.11  OSVDB:28352,28355,28354,28357,28358 SA21666 http://www.joomla.org/content/view/1841/78/ http://www.joomla.org/content/view/1843/74/
+# CVE-2006-6832 1.0.12  OSVDB:32519 SA23563
+# CVE-2006-6833 1.0.12  OSVDB:32521 SA23563
+# CVE-2006-6834 1.0.12  OSVDB:32536 SA23563
+# CVE-2007-4188 1.0.13  OSVDB:38758 SA26239
+# CVE-2007-4189 1.0.13  OSVDB:38755,38756,38757 SA26239
+# CVE-2007-4190 1.0.13  OSVDB:38739 SA26239
+# CVE-2007-5577 1.0.13  OSVDB:37173 SA25804
+# CVE-2007-5427 1.0.14  OSVDB:37709 SA27196
+# CVE-2008-5671 1.0.15  OSVDB:42123 SA29106 http://www.joomla.org/announcements/release-news/4609-joomla-1015-released.html
+# CVE-2007-6642 1.5 RC4 OSVDB:41263 SA28219
+# CVE-2007-6643 1.5 RC4 OSVDB:39979 SA29257
+# CVE-2008-1533 1.5.1   OSVDB:42894 SA28861 http://www.joomla.org/announcements/release-news/4560-joomla-1-5-1-released.html
+# CVE-2008-3225 1.5.4   OSVDB:46810 SA30974 http://www.joomla.org/announcements/release-news/5180-joomla-154-released.html
+# CVE-2008-3226 1.5.4   OSVDB:46811 SA30974 http://www.joomla.org/announcements/release-news/5180-joomla-154-released.html
+# CVE-2008-3227 1.5.4   OSVDB:46812 SA30974 http://www.joomla.org/announcements/release-news/5180-joomla-154-released.html
+# CVE-2008-3681 1.5.6   OSVDB:47476 SA31457 http://developer.joomla.org/security/news/241-20080801-core-password-remind-functionality.html
+# CVE-2008-4102 1.5.7   OSVDB:48226 SA31789 http://developer.joomla.org/security/news/272-20080902-core-random-number-generation-flaw.html
+# CVE-2008-4103 1.5.7   OSVDB:48227 SA31789 http://developer.joomla.org/security/news/273-20080903-core-commailto-spam.html
+# CVE-2008-4104 1.5.7   OSVDB:48228 SA31789 http://developer.joomla.org/security/news/274-20080904-core-redirect-spam.html
+# CVE-2008-4105 1.5.7   OSVDB:48225 SA31789 http://developer.joomla.org/security/news/271-20080901-core-jrequest-variable-injection.html
+# CVE-2008-6299 1.5.8   OSVDB:49801,49802 SA32622
+# CVE-2009-0113 1.5.9   OSVDB:51172 SA33377
+# CVE-2009-1279 1.5.10  OSVDB:53582,53583,53584 SA34551
+#               1.5.13              SA35899
+# CVE-2011-4912 1.5.14  OSVDB:56714 SA36097 http://developer.joomla.org/security/news/303-20090723-core-com-mailto-timeout-issue.html
+# CVE-2009-3945 1.5.15  OSVDB:59801 SA37262 http://developer.joomla.org/security/news/305-20091103-core-front-end-editor-issue-.html
+# CVE-2009-3946 1.5.15  OSVDB:59800 SA37262 http://developer.joomla.org/security/news/306-20091103-core-xml-file-read-issue.html
+# CVE-2010-1432 1.5.16  OSVDB:78012 SA39616 http://developer.joomla.org/security/news/311-20100423-core-negative-values-for-limit-and-offset.html
+# CVE-2010-1433 1.5.16  OSVDB:78011 SA39616 http://developer.joomla.org/security/news/310-20100423-core-installer-migration-script.html
+# CVE-2010-1434 1.5.16  OSVDB:64168 SA39616 http://developer.joomla.org/security/news/309-20100423-core-sessation-fixation.html
+# CVE-2010-1435 1.5.16  OSVDB:64167 SA39616 http://developer.joomla.org/security/news/308-20100423-core-password-reset-tokens.html
+# CVE-2010-1649 1.5.18  OSVDB:65011 Bugtraq:40444 SA39964 http://developer.joomla.org/security/news/314-20100501-core-xss-vulnerabilities-in-back-end.html
+# CVE-2010-2535 1.5.20  OSVDB:66394 SA40644 http://developer.joomla.org/security/news/315-20100701-core-sql-injection-internal-path-exposure.html http://developer.joomla.org/security/news/316-20100702-core-xss-vulnerabillitis-in-back-end.html http://developer.joomla.org/security/news/317-20100703-core-xss-vulnerabillitis-in-back-end.html http://developer.joomla.org/security/news/318-20100704-core-xss-vulnerabillitis-in-back-end.html
+# CVE-2010-3712 1.5.21  OSVDB:68625 SA41772 http://developer.joomla.org/security/news/322-20101001-core-xss-vulnerabilities.html
+# CVE-2010-4166 1.5.22  OSVDB:69026 SA42133 http://developer.joomla.org/security/news/323-20101101-core-sqli-info-disclosurevulnerabilities.html
+# CVE-2011-0005 1.5.22  OSVDB:70369
+# CVE-2011-2488 1.5.23
+# CVE-2011-2889 1.5.23
+# CVE-2011-2890 1.5.23
+# Won't be assigned 1.5.24  OSVDB:76720 SA46421 http://developer.joomla.org/security/news/372-20111003-core-information-disclosure
+# CVE-2011-4321 1.5.25  OSVDB:77094 http://developer.joomla.org/security/news/374-20111102-core-password-change http://developer.joomla.org/security/news/375-20111103-core-password-change
+# CVE-2012-1598 1.5.26  http://developer.joomla.org/security/news/396-20120305-core-password-change
+# CVE-2012-1599 1.5.26  OSVDB:80708 http://developer.joomla.org/security/news/397-20120306-core-information-disclosure
 joomla 1.5:
   1:
     location: ['/libraries/joomla/version.php', '/includes/version.php']
