--- a/yamls/wordpress.yaml
+++ b/yamls/wordpress.yaml
@@ -100,8 +100,8 @@
 # CVE-2012-3385 3.4.1   http://codex.wordpress.org/Version_3.4.1
 wordpress:
   1:
-    location: /wp-includes/version.php
+    location: ['/wp-includes/version.php']
     secure_version: 3.4.1
-    regexp: \$wp_version.*?(?P<version>[0-9.]+)
+    regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
     cve: http://codex.wordpress.org/Version_3.4.1 CVE-2012-3383, CVE-2012-3384, CVE-2012-3385
     fingerprint: detect_general
