--- a/yamls/joomla-1.7.yaml
+++ b/yamls/joomla-1.7.yaml
@@ -11,7 +11,7 @@
 # CVE-2012-0820 1.7.4   OSVDB:78515 http://developer.joomla.org/security/news/383-20120102-core-xss-vulnerability.html
 # CVE-2012-0821 1.7.4   OSVDB:78518 http://developer.joomla.org/security/news/384-20120103-core-information-disclosure.html
 # CVE-2012-0822 1.7.4   OSVDB:78516 http://developer.joomla.org/security/news/385-20120104-core-xss-vulnerability.html
-joomla 1.7:
+Joomla 1.7:
   1:
     location: ['/libraries/joomla/version.php', '/includes/version.php']
     secure_version: 1.7.4
