--- a/yamls/wordpress.yaml
+++ b/yamls/wordpress.yaml
@@ -98,7 +98,7 @@
 # CVE-2012-3383 3.4.1   http://codex.wordpress.org/Version_3.4.1
 # CVE-2012-3384 3.4.1   http://codex.wordpress.org/Version_3.4.1
 # CVE-2012-3385 3.4.1   http://codex.wordpress.org/Version_3.4.1
-wordpress:
+WordPress:
   1:
     location: ['/wp-includes/version.php']
     secure_version: 3.4.1
