Added few old issues.

--- a/yamls/mediawiki.yaml
+++ b/yamls/mediawiki.yaml
@@ -1,3 +1,5 @@
+# CVE-2009-4570
+# CVE-2009-4589
 # CVE-2010-1189 1.15.2      OSVDB:62798 SA38856
 # CVE-2010-1190 1.15.2      OSVDB:62799 SA38856
 # CVE-2010-1150 1.15.3      OSVDB:63570 SA39333
