--- a/yamls/moinmoin.yaml
+++ b/yamls/moinmoin.yaml
@@ -1,34 +1,33 @@
-# CVE-2007-0857 1.5.7 (SA24096)
-# CVE-2007-0901 1.5.8 (SA24138)
-# CVE-2007-2423 1.5.8 (SA24138)
-# CVE-2007-2637 1.5.8 (SA24138)
-# CVE-2008-0780 1.6.1 (SA29010)
-# CVE-2008-0781 1.6.1 (SA29010)
-# CVE-2008-0782 1.6.1 (SA29010)
-# CVE-2008-1098 1.6.1 (SA29010)
-# CVE-2008-1099 1.6.1 (SA29010)
-# CVE-2008-1937 1.6.3 (SA29894)
-# CVE-2008-3381 1.7.1 (SA31135)
+# TODO: 1.0 OSVDB:2878 SA10318 no CVE
+# TODO: 1.1 OSVDB:2911 no CVE
+# TODO: 1.2.2 OSVDB:6704 SA11807 no CVE
+# TODO: 1.2.3 OSVDB:8194,8195 SA11832 no CVE
+# TODO: 1.3.3 OSVDB:13184 SA14001 no CVE
+# CVE-2007-0857 1.5.7 SA24096
+# CVE-2007-0901 1.5.8 SA24138
+# CVE-2007-2423 1.5.8 SA24138
+# CVE-2007-2637 1.5.8 SA24138
+# CVE-2008-0780 1.6.1 SA29010
+# CVE-2008-0781 1.6.1 SA29010
+# CVE-2008-0782 1.6.1 SA29010
+# CVE-2008-1098 1.6.1 SA29010
+# CVE-2008-1099 1.6.1 SA29010
+# CVE-2008-1937 1.6.3 SA29894
+# CVE-2008-3381 1.7.1 SA31135
 # N/A           1.8.x OSVDB:49752 SA32686
-# CVE-2009-0260 1.8.2 (SA33593)
-# CVE-2009-0312 1.8.2 (SA33593)
-# CVE-2009-1482 1.8.3 (SA34821)
-# CVE-2009-4762 1.8.4 (SA35407)
-# CVE-2010-0667 1.9.1 (SA38242)
-# CVE-2010-0668 1.9.2 (SA38444)
-# CVE-2010-0669 1.9.2 (SA38444)
-# CVE-2010-0717 1.9.2 (SA38444)
-# CVE-2010-0828 1.9.3 (SA39188)
-# CVE-2010-2487 1.9.3 (SA40043)
-# CVE-2010-2969 1.9.3 (SA40043)
-# CVE-2010-2970 1.9.3 (SA40043)
-# CVE-2011-1058 1.9.3 (SA43413)
-# TODO:
-#   1.0 OSVDB:2878 SA10318 no CVE
-#   1.1 OSVDB:2911 no CVE
-#   1.2.2 OSVDB:6704 SA11807 no CVE
-#   1.2.3 OSVDB:8194,8195 SA11832 no CVE
-#   1.3.3 OSVDB:13184 SA14001 no CVE
+# CVE-2009-0260 1.8.2 SA33593
+# CVE-2009-0312 1.8.2 SA33593
+# CVE-2009-1482 1.8.3 SA34821
+# CVE-2009-4762 1.8.4 SA35407
+# CVE-2010-0667 1.9.1 SA38242
+# CVE-2010-0668 1.9.2 SA38444
+# CVE-2010-0669 1.9.2 SA38444
+# CVE-2010-0717 1.9.2 SA38444
+# CVE-2010-0828 1.9.3 SA39188
+# CVE-2010-2487 1.9.3 SA40043
+# CVE-2010-2969 1.9.3 SA40043
+# CVE-2010-2970 1.9.3 SA40043
+# CVE-2011-1058 1.9.3 SA43413
 # TODO: fingerprint list is not full. Check OSVDB.
 MoinMoin:
   1:
