Added quotes so that secure_version is loaded as string and not float. TikiWiki had issue where 8.4 got to be 8.4000000000000004 so this caused false-negatives.

--- a/yamls/e107.yaml
+++ b/yamls/e107.yaml
@@ -52,7 +52,7 @@
 e107:
   1:
     location: ['/e107_admin/ver.php']
-    secure_version: 1.0.0
+    secure_version: '1.0.0'
     regexp: ['.*?e107_version.*?(?P<version>[.0-9]{2,})']
     cve: CVE-2011-4920 CVE-2011-4921 OSVDB:78047-78050 SA46706
     fingerprint: detect_general
