--- a/yamls/mediawiki.yaml
+++ b/yamls/mediawiki.yaml
@@ -21,7 +21,7 @@
 MediaWiki:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: 1.17.3
+    secure_version: '1.17.3'
     regexp: ['\$wgVersion.*?(?P<version>[0-9.]{1,})']
     cve: CVE-2012-1578 CVE-2012-1579 CVE-2012-1580 CVE-2012-1581 CVE-2012-1582 OSVDB:80361,80362,80363,80364,80365 http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000109.html
     fingerprint: detect_general
