--- a/yamls/tikiwiki.yaml
+++ b/yamls/tikiwiki.yaml
@@ -14,7 +14,7 @@
 TikiWiki:
   1:
     location: ['/lib/setup/twversion.class.php']
-    secure_version: 8.4
+    secure_version: '8.4'
     regexp: ['.*?\$this->version.*?(?P<version>[0-9.]{1,})']
     cve: CVE-2012-0911 http://osvdb.org/83534, CVE-2012-3996 http://osvdb.org/83533
     fingerprint: detect_general
