--- a/yamls/cmsms.yaml
+++ b/yamls/cmsms.yaml
@@ -17,7 +17,7 @@
 CMSMS:
   1:
     location: ['/version.php']
-    secure_version: 1.9.4.3
+    secure_version: '1.9.4.3'
     regexp: ['\$CMS_VERSION.*?(?P<version>[.0-9]{2,})']
     cve: CVE-2011-4310 http://www.cmsmadesimple.org/2011/08/Announcing-CMSMS-1-9-4-3---Security-Release/
     fingerprint: detect_general
