--- a/yamls/trac.yaml
+++ b/yamls/trac.yaml
@@ -17,7 +17,7 @@
 Trac:
   1:
     location: ['/Trac.egg-info/PKG-INFO']
-    secure_version: 0.11.7
+    secure_version: '0.11.7'
     regexp: ['Version.*?(?P<version>[.0-9]{2,})']
     cve: OSVDB:63317
     fingerprint: detect_general
