--- a/yamls/trac.yaml
+++ b/yamls/trac.yaml
@@ -19,5 +19,5 @@ Trac:
     location: ['/Trac.egg-info/PKG-INFO']
     secure_version: '0.11.7'
     regexp: ['Version.*?(?P<version>[.0-9]{2,})']
-    cve: OSVDB:63317
+    cve: http://osvdb.org/63317
     fingerprint: detect_general
