--- a/yamls/mediawiki.yaml
+++ b/yamls/mediawiki.yaml
@@ -21,24 +21,27 @@
 # CVE-2012-1582 1.17.3 or 1.18.2 OSVDB:80363 http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000109.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000110.html
 # CVE-2012-5391 1.20.1/1.19.3 OSVDB:87928 SA51424
 # CVE-2012-5395 1.20.1/1.19.3 OSVDB:87928 SA51424
+# CVE-2013-1816 1.20.3/1.19.4 http://www.mediawiki.org/wiki/Release_notes/1.20 http://www.mediawiki.org/wiki/Release_notes/1.19
+# CVE-2013-1817 1.20.3/1.19.4 http://www.mediawiki.org/wiki/Release_notes/1.20 http://www.mediawiki.org/wiki/Release_notes/1.19
+# CVE-2013-1818 1.20.3/1.19.4 http://www.mediawiki.org/wiki/Release_notes/1.20 http://www.mediawiki.org/wiki/Release_notes/1.19
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.20.1'
+    secure_version: '1.20.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
-    cve: CVE-2012-5395 OSVDB:87928 SA51424
+    cve: CVE-2013-1816 CVE-2013-1817 CVE-2013-1818
     fingerprint: detect_general
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.19.3'
+    secure_version: '1.19.4'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
-    cve: CVE-2012-5395 OSVDB:87928 SA51424
+    cve: CVE-2013-1816 CVE-2013-1817 CVE-2013-1818
     fingerprint: detect_general
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.20.1'
+    secure_version: '1.20.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.18\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18.x is end of life.'
     fingerprint: detect_general
