--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -43,4 +43,11 @@
 # DRUPAL-SA-CORE-2013-001   CVE-2013-0244 7.19/6.28 http://drupal.org/SA-CORE-2013-001
 # DRUPAL-SA-CORE-2013-001   CVE-2013-0245 7.19/6.28 http://drupal.org/SA-CORE-2013-001
 # DRUPAL-SA-CORE-2013-001   CVE-2013-0246 7.19/6.28 http://drupal.org/SA-CORE-2013-001
-# DRUPAL-SA-CORE-2013-002   CVE-2013-0316           http://drupal.org/SA-CORE-2013-002
+# DRUPAL-SA-CORE-2013-002   CVE-2013-0316 7.20      http://drupal.org/SA-CORE-2013-002
+Drupal:
+  1:
+    location: ['/includes/bootstrap.inc']
+    secure_version: '7.20'
+    regexp: ['define.*?(?P<version>[0-9.]+)']
+    cve: CVE-2013-0316 http://drupal.org/SA-CORE-2013-002 http://osvdb.org/90517
+    fingerprint: detect_general
