--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -39,7 +39,7 @@
 # DRUPAL-SA-CONTRIB-2013-034    CVE-2013-1859   http://drupal.org/node/1942330
 # DRUPAL-SA-CONTRIB-2013-035                    http://drupal.org/node/1948358
 # CORE
-# DRUPAL-SA-CORE-2012-004   http://drupal.org/SA-CORE-2012-004
+# DRUPAL-SA-CORE-2012-004   CVE-2012-5651/CVE-2012-5652/CVE-2012-5653 7.18/6.27 http://drupal.org/SA-CORE-2012-004
 # DRUPAL-SA-CORE-2013-001   CVE-2013-0244 7.19/6.28 http://drupal.org/SA-CORE-2013-001
 # DRUPAL-SA-CORE-2013-001   CVE-2013-0245 7.19/6.28 http://drupal.org/SA-CORE-2013-001
 # DRUPAL-SA-CORE-2013-001   CVE-2013-0246 7.19/6.28 http://drupal.org/SA-CORE-2013-001
