CVE for DRUPAL-SA-CONTRIB-2013-035

--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -37,7 +37,7 @@
 # DRUPAL-SA-CONTRIB-2013-032    CVE-2013-1786   http://drupal.org/node/1929512
 # DRUPAL-SA-CONTRIB-2013-033    CVE-2013-1787   http://drupal.org/node/1929514
 # DRUPAL-SA-CONTRIB-2013-034    CVE-2013-1859   http://drupal.org/node/1942330
-# DRUPAL-SA-CONTRIB-2013-035                    http://drupal.org/node/1948358
+# DRUPAL-SA-CONTRIB-2013-035    CVE-2013-1887   http://drupal.org/node/1948358
 # CORE
 # DRUPAL-SA-CORE-2012-004   CVE-2012-5651/CVE-2012-5652/CVE-2012-5653 7.18/6.27 http://drupal.org/SA-CORE-2012-004
 # DRUPAL-SA-CORE-2013-001   CVE-2013-0244 7.19/6.28 http://drupal.org/SA-CORE-2013-001
