--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -10,8 +10,8 @@
 # CVE-2005-1687 1.5.1
 # CVE-2005-1688 1.5.1
 # CVE-2005-1810 1.5.1.2
-# CVE-2005-1921 1.5.1.3 http://www.securityfocus.com/bid/14088/info http://wordpress.org/news/2005/06/wordpress-1513/
-# CVE-2005-2116 1.5.1.3 http://www.securityfocus.com/bid/14088/info http://wordpress.org/news/2005/06/wordpress-1513/
+# CVE-2005-1921 1.5.1.3 http://wordpress.org/news/2005/06/wordpress-1513/
+# CVE-2005-2116 1.5.1.3 http://wordpress.org/news/2005/06/wordpress-1513/
 # CVE-2005-2612 1.5.2
 # CVE-2005-2107 1.5.1.3
 # CVE-2005-2108 1.5.1.3
