--- a/yamls/mantisbt.yml
+++ b/yamls/mantisbt.yml
@@ -1,16 +1,16 @@
-# CVE-2011-2938 OSVDB:74566
+# CVE-2011-2938 http://osvdb.org/74566
 # CVE-2011-3356
 # CVE-2011-3357
 # CVE-2011-3358
 # CVE-2011-3578
-# CVE-2012-1118
+# CVE-2012-1118 http://osvdb.org/79834
 # CVE-2012-1119
-# CVE-2012-1120 OSVDB:79833
-# CVE-2012-1121 OSVDB:79831
+# CVE-2012-1120 http://osvdb.org/79833
+# CVE-2012-1121 http://osvdb.org/79831
 # CVE-2012-1122
-# CVE-2012-1123 OSVDB:79832
-# CVE-2012-2691 OSVDB:82838
-# CVE-2012-2692 OSVDB:83166
+# CVE-2012-1123 http://osvdb.org/79832
+# CVE-2012-2691 http://osvdb.org/82838
+# CVE-2012-2692 http://osvdb.org/83166
 # CVE-2013-0197
 # CVE-2013-1810
 # CVE-2013-1811
