--- a/yamls/e107.yml
+++ b/yamls/e107.yml
@@ -49,12 +49,12 @@
 #               0.7.26  This is not fixed yet. SVN revision 12375 is fix
 # CVE-2011-4920 1.0.0   OSVDB:78047-78049 SA46706
 # CVE-2011-4921 1.0.0   OSVDB:78050
-# CVE-2012-6433 # TODO
-# CVE-2012-6434
+# CVE-2012-6433 1.0.2   http://osvdb.org/88862
+# CVE-2012-6434 1.0.3   http://osvdb.org/88908
 e107:
   1:
     location: ['/e107_admin/ver.php']
-    secure_version: '1.0.0'
+    secure_version: '1.0.3'
     regexp: ['.*?e107_version.*?(?P<version>[.0-9]{2,})']
-    cve: CVE-2011-4920 CVE-2011-4921 OSVDB:78047-78050 SA46706
+    cve: CVE-2012-6434 http://osvdb.org/88908
     fingerprint: detect_general
