--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -42,6 +42,6 @@ MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
     secure_version: '1.20.3'
-    regexp: ['\$wgVersion.*?(?P<version>1\.18\.[0-9.]{1,})']
+    regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18.x is end of life.'
     fingerprint: detect_general
