--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -1,26 +1,26 @@
 # http://www.mediawiki.org/wiki/Version_lifecycle
 # CVE-2009-4570
 # CVE-2009-4589
-# CVE-2010-1189 1.15.2      OSVDB:62798 SA38856
-# CVE-2010-1190 1.15.2      OSVDB:62799 SA38856
-# CVE-2010-1150 1.15.3      OSVDB:63570 SA39333
-# CVE-2011-0537 1.16.2      OSVDB:70798,70799
-# CVE-2011-1578 1.16.5      OSVDB:74619 SA44142
-# CVE-2011-1579 1.16.3      OSVDB:74620 SA44142
-# CVE-2011-1580 1.16.3      OSVDB:74621 SA44142
-# CVE-2011-1587 1.16.5      OSVDB:74619 SA44142
-# CVE-2011-1765 1.16.5      OSVDB:74619 SA44142
-# CVE-2011-1766 1.16.5      OSVDB:74613 SA44142
-# CVE-2011-4360 1.17.1      OSVDB:77364 SA47029 http://lists.wikimedia.org/pipermail/mediawiki-announce/2011-November/000104.html
-# CVE-2011-4361 1.17.1      OSVDB:77365 SA47029 http://lists.wikimedia.org/pipermail/mediawiki-announce/2011-November/000104.html
-# CVE-2012-0046 1.17.2      OSVDB:78260 SA47547 http://svn.wikimedia.org/svnroot/mediawiki/tags/REL1_17_2/phase3/RELEASE-NOTES http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-January/000106.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-January/000107.html
-# CVE-2012-1578 1.17.3 or 1.18.2 OSVDB:80361 http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000109.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000110.html
-# CVE-2012-1579 1.17.3 or 1.18.2 OSVDB:80362 http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000109.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000110.html
-# CVE-2012-1580 1.17.3 or 1.18.2 OSVDB:80364 http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000109.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000110.html
-# CVE-2012-1581 1.17.3 or 1.18.2 OSVDB:80365 http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000109.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000110.html
-# CVE-2012-1582 1.17.3 or 1.18.2 OSVDB:80363 http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000109.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000110.html
-# CVE-2012-5391 1.20.1/1.19.3 OSVDB:87928 SA51424
-# CVE-2012-5395 1.20.1/1.19.3 OSVDB:87928 SA51424
+# CVE-2010-1189 1.15.2      http://osvdb.org/62798 SA38856
+# CVE-2010-1190 1.15.2      http://osvdb.org/62799 SA38856
+# CVE-2010-1150 1.15.3      http://osvdb.org/63570 SA39333
+# CVE-2011-0537 1.16.2      http://osvdb.org/70798,70799
+# CVE-2011-1578 1.16.5      http://osvdb.org/74619 SA44142
+# CVE-2011-1579 1.16.3      http://osvdb.org/74620 SA44142
+# CVE-2011-1580 1.16.3      http://osvdb.org/74621 SA44142
+# CVE-2011-1587 1.16.5      http://osvdb.org/74619 SA44142
+# CVE-2011-1765 1.16.5      http://osvdb.org/74619 SA44142
+# CVE-2011-1766 1.16.5      http://osvdb.org/74613 SA44142
+# CVE-2011-4360 1.17.1      http://osvdb.org/77364 SA47029 http://lists.wikimedia.org/pipermail/mediawiki-announce/2011-November/000104.html
+# CVE-2011-4361 1.17.1      http://osvdb.org/77365 SA47029 http://lists.wikimedia.org/pipermail/mediawiki-announce/2011-November/000104.html
+# CVE-2012-0046 1.17.2      http://osvdb.org/78260 SA47547 http://svn.wikimedia.org/svnroot/mediawiki/tags/REL1_17_2/phase3/RELEASE-NOTES http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-January/000106.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-January/000107.html
+# CVE-2012-1578 1.17.3 or 1.18.2 http://osvdb.org/80361 http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000109.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000110.html
+# CVE-2012-1579 1.17.3 or 1.18.2 http://osvdb.org/80362 http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000109.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000110.html
+# CVE-2012-1580 1.17.3 or 1.18.2 http://osvdb.org/80364 http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000109.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000110.html
+# CVE-2012-1581 1.17.3 or 1.18.2 http://osvdb.org/80365 http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000109.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000110.html
+# CVE-2012-1582 1.17.3 or 1.18.2 http://osvdb.org/80363 http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000109.html http://lists.wikimedia.org/pipermail/mediawiki-announce/2012-March/000110.html
+# CVE-2012-5391 1.20.1/1.19.3 http://osvdb.org/87928 SA51424
+# CVE-2012-5395 1.20.1/1.19.3 http://osvdb.org/87928 SA51424
 # CVE-2013-1816 1.20.3/1.19.4 http://www.mediawiki.org/wiki/Release_notes/1.20 http://www.mediawiki.org/wiki/Release_notes/1.19
 # CVE-2013-1817 1.20.3/1.19.4 http://www.mediawiki.org/wiki/Release_notes/1.20 http://www.mediawiki.org/wiki/Release_notes/1.19
 # CVE-2013-1818 1.20.3/1.19.4 http://www.mediawiki.org/wiki/Release_notes/1.20 http://www.mediawiki.org/wiki/Release_notes/1.19
