--- a/yamls/phpbb3.yml
+++ b/yamls/phpbb3.yml
@@ -1,4 +1,4 @@
-# CVE-2008-7143             OSVDB:51121
+# CVE-2008-7143             http://osvdb.org/51121
 # CVE-2008-1766 3.0.1       SA29801
 # CVE-2008-6506 3.0.4       SA33166
 # CVE-2008-6507 3.0.4       SA33166
