--- a/yamls/roundcube.yml
+++ b/yamls/roundcube.yml
@@ -9,12 +9,12 @@
 # CVE-2011-1491
 # CVE-2011-1492
 # CVE-2011-2937
-# CVE-2011-4078 0.5.4 OSVDB:77047
+# CVE-2011-4078 0.5.4 http://osvdb.org/77047
 # CVE-2012-1253
 # CVE-2012-3507
-# CVE-2012-3508 N/A   OSVDB:84741
-# CVE-2012-4668 0.8.1 OSVDB:85142
-# CVE-2012-6121 0.8.5 OSVDB:90175,90177
+# CVE-2012-3508 N/A   http://osvdb.org/84741
+# CVE-2012-4668 0.8.1 http://osvdb.org/85142
+# CVE-2012-6121 0.8.5 http://osvdb.org/90175,90177
 # CVE-2013-1904 0.8.6
 Roundcube:
   1:
