--- a/yamls/smf.yml
+++ b/yamls/smf.yml
@@ -1,60 +1,60 @@
-# CVE-2004-1996 "last vulnerable 1.0 Beta 5" OSVDB:16898
-# CVE-2005-2817 "last vulnerable 1.0.5" OSVDB:19120 SA16646
-#               1.0.5 OSVDB:17458 SA15784 CVE requested
-# CVE-2005-4159 1.1 RC1 OSVDB:21722
-# CVE-2006-0896 1.0.7 OSVDB:23480 SA19004 EV0086
-# CVE-2006-7013 "last vulnerable 1.0.7" OSVDB:35706
-# CVE-2006-4467 1.0.8 OSVDB:30715
-# CVE-2006-4564 1.0.9 OSVDB:28457 SA21740
-# N/A           1.0.9 OSVDB:77413 SA21740
-# CVE-2006-5503 "last vulnerable 1.1 RC2" OSVDB:31070
-# CVE-2006-6375 1.1.1 OSVDB:31731 SA23175
-# CVE-2007-0399 1.1.1/1.1 RC3 OSVDB:32606
-# CVE-2007-3309 "last vulnerable 1.1.2" OSVDB:40433
-# CVE-2007-3308 "last vulnerable 1.1.2" OSVDB:40617
-# CVE-2007-2546 1.1.3 OSVDB:35705 SA25139
+# CVE-2004-1996 "last vulnerable 1.0 Beta 5" http://osvdb.org/16898
+# CVE-2005-2817 "last vulnerable 1.0.5" http://osvdb.org/19120 SA16646
+#               1.0.5 http://osvdb.org/17458 SA15784 CVE requested
+# CVE-2005-4159 1.1 RC1 http://osvdb.org/21722
+# CVE-2006-0896 1.0.7 http://osvdb.org/23480 SA19004 EV0086
+# CVE-2006-7013 "last vulnerable 1.0.7" http://osvdb.org/35706
+# CVE-2006-4467 1.0.8 http://osvdb.org/30715
+# CVE-2006-4564 1.0.9 http://osvdb.org/28457 SA21740
+# N/A           1.0.9 http://osvdb.org/77413 SA21740
+# CVE-2006-5503 "last vulnerable 1.1 RC2" http://osvdb.org/31070
+# CVE-2006-6375 1.1.1 http://osvdb.org/31731 SA23175
+# CVE-2007-0399 1.1.1/1.1 RC3 http://osvdb.org/32606
+# CVE-2007-3309 "last vulnerable 1.1.2" http://osvdb.org/40433
+# CVE-2007-3308 "last vulnerable 1.1.2" http://osvdb.org/40617
+# CVE-2007-2546 1.1.3 http://osvdb.org/35705 SA25139
 # CVE-2007-3942 "last vulnerable 1.1.3" DISPUTED
-# CVE-2007-5646 1.1.4/1.0.12 OSVDB:38070 SA27346
-# CVE-2008-0284 "last vulnerable 1.1.4" OSVDB:42934,42935
-# CVE-2008-2019 "last vulnerable 1.1.4" OSVDB:44981 (insufficient fix for CVE-2007-3308)
-# CVE-2008-6544 "last vulnerable 1.1.4" OSVDB:51301
-# CVE-2008-6741 "last vulnerable 1.1.4" OSVDB:53974
-# CVE-2008-3072 1.1.5/1.0.13 OSVDB:47003 SA30955
-# CVE-2008-3073 1.1.5/1.0.13 OSVDB:47002 SA30955
-# CVE-2008-6971 1.1.6 OSVDB:47945 SA31750
-# CVE-2008-6657 1.1.7/1.0.15 OSVDB:50071 SA32516
-# CVE-2008-6658 1.1.7/1.0.15 OSVDB:50070 SA32516
-# CVE-2008-6659 1.1.7/1.0.15 OSVDB:50072 SA32516
-# N/A           1.1.8 OSVDB:51735 SA33790
-# N/A           1.1.9 OSVDB:51646 SA33670
+# CVE-2007-5646 1.1.4/1.0.12 http://osvdb.org/38070 SA27346
+# CVE-2008-0284 "last vulnerable 1.1.4" http://osvdb.org/42934,42935
+# CVE-2008-2019 "last vulnerable 1.1.4" http://osvdb.org/44981 (insufficient fix for CVE-2007-3308)
+# CVE-2008-6544 "last vulnerable 1.1.4" http://osvdb.org/51301
+# CVE-2008-6741 "last vulnerable 1.1.4" http://osvdb.org/53974
+# CVE-2008-3072 1.1.5/1.0.13 http://osvdb.org/47003 SA30955
+# CVE-2008-3073 1.1.5/1.0.13 http://osvdb.org/47002 SA30955
+# CVE-2008-6971 1.1.6 http://osvdb.org/47945 SA31750
+# CVE-2008-6657 1.1.7/1.0.15 http://osvdb.org/50071 SA32516
+# CVE-2008-6658 1.1.7/1.0.15 http://osvdb.org/50070 SA32516
+# CVE-2008-6659 1.1.7/1.0.15 http://osvdb.org/50072 SA32516
+# N/A           1.1.8 http://osvdb.org/51735 SA33790
+# N/A           1.1.9 http://osvdb.org/51646 SA33670
 # N/A           1.1.11 SA37557
-# N/A           1.1.19 OSVDB:54773 SA35267
-# CVE-2009-5068 1.1.11 OSVDB:86444
-# CVE-2011-1127 1.1.13 OSVDB:71009 SA43436
-# CVE-2011-1128 1.1.13 OSVDB:75235
-# CVE-2011-1129 1.1.13 OSVDB:74321
-# CVE-2011-1130 1.1.13 OSVDB:75233,75234
-# CVE-2011-1131 1.1.13 OSVDB:74121
-# N/A           1.1.15 OSVDB:77727 http://www.simplemachines.org/community/index.php?topic=466218.0
-# CVE-2011-3615 2.0.1/1.1.15 OSVDB:76822 SA46386
-# CVE-2011-4173 2.0.1 OSVDB:76317 SA46386
-# N/A           2.0.1/1.1.15 OSVDB:76318 SA46386
+# N/A           1.1.19 http://osvdb.org/54773 SA35267
+# CVE-2009-5068 1.1.11 http://osvdb.org/86444
+# CVE-2011-1127 1.1.13 http://osvdb.org/71009 SA43436
+# CVE-2011-1128 1.1.13 http://osvdb.org/75235
+# CVE-2011-1129 1.1.13 http://osvdb.org/74321
+# CVE-2011-1130 1.1.13 http://osvdb.org/75233,75234
+# CVE-2011-1131 1.1.13 http://osvdb.org/74121
+# N/A           1.1.15 http://osvdb.org/77727 http://www.simplemachines.org/community/index.php?topic=466218.0
+# CVE-2011-3615 2.0.1/1.1.15 http://osvdb.org/76822 SA46386
+# CVE-2011-4173 2.0.1 http://osvdb.org/76317 SA46386
+# N/A           2.0.1/1.1.15 http://osvdb.org/76318 SA46386
 #
 # Not going to add:
-#   OSVDB:32605 too little information
-#   CVE-2007-5943 OSVDB:39961 myth/fake
-#   CVE-2012-5903 OSVDB:80766 
+#   http://osvdb.org/32605 too little information
+#   CVE-2007-5943 http://osvdb.org/39961 myth/fake
+#   CVE-2012-5903 http://osvdb.org/80766 
 SMF 1:
   1:
     location: ['/index.php']
     secure_version: '1.1.15'
     regexp: ['\$forum_version.*?(?P<version>1[0-9.]{1,})']
-    cve: CVE-2011-3615 OSVDB:76822, CVE-2011-4173 OSVB:76317, OSVDB:46386
+    cve: CVE-2011-3615 http://osvdb.org/76822, CVE-2011-4173 OSVB:76317, http://osvdb.org/46386
     fingerprint: detect_general
 SMF 2:
   1:
     location: ['/index.php']
     secure_version: '2.0.1'
     regexp: ['\$forum_version.*?(?P<version>2[0-9.]{1,})']
-    cve: CVE-2011-3615 OSVDB:76822, CVE-2011-4173 OSVB:76317, OSVDB:46386
+    cve: CVE-2011-3615 http://osvdb.org/76822, CVE-2011-4173 OSVB:76317, http://osvdb.org/46386
     fingerprint: detect_general
