--- a/yamls/gallery3.yml
+++ b/yamls/gallery3.yml
@@ -1,10 +1,13 @@
+# NOTES:
+#   http://osvdb.org/92789 should be removed as duplicate of http://osvdb.org/92691
+#   http://osvdb.org/92690 should be removed as duplicate of http://osvdb.org/92740
 # CVE-2008-5296
 # CVE-2012-1113
 # CVE-2012-4342
 # CVE-2012-4343
 # CVE-2013-XXXX 3.0.5 http://osvdb.org/90599 http://osvdb.org/91412 http://osvdb.org/90590 http://osvdb.org/90599 http://osvdb.org/90600 http://osvdb.org/90601 http://osvdb.org/91410 http://osvdb.org/91411
 # CVE-2013—XXXX 3.0.7 http://osvdb.org/92690 http://osvdb.org/92691 http://osvdb.org/92740
-# CVE-2013-XXXX 3.0.7 http://osvdb.org/92789 # TODO
+# CVE-2013-XXXX 3.0.7 http://osvdb.org/92789
 Gallery 3:
   1:
     location: ['/modules/gallery/helpers/gallery.php']
