--- a/yamls/gallery3.yml
+++ b/yamls/gallery3.yml
@@ -10,6 +10,7 @@
 # CVE-2013-XXXX 3.0.5 http://osvdb.org/90599 http://osvdb.org/91412 http://osvdb.org/90590 http://osvdb.org/90599 http://osvdb.org/90600 http://osvdb.org/90601 http://osvdb.org/91410 http://osvdb.org/91411
 # CVE-2013-2087 3.0.7 http://osvdb.org/92691
 # CVE-2013-2087 3.0.7 http://osvdb.org/92740
+# CVE-2013-2087
 Gallery 3:
   1:
     location: ['/modules/gallery/helpers/gallery.php']
@@ -17,3 +18,4 @@ Gallery 3:
     regexp: ['.*?const.*?VERSION.*?(?P<version>[0-9.]{1,})']
     cve: 'http://osvdb.org/92691 http://osvdb.org/92740'
     fingerprint: detect_general
+    post_processing: ['php5.fcgi']
