--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -27,6 +27,7 @@
 # CVE-2013-1951 1.20.4/1.19.5
 # CVE-2013-2031 1.20.5/1.19.6 http://lists.wikimedia.org/pipermail/mediawiki-announce/2013-April/000129.html
 # CVE-2013-2032 1.20.5/1.19.6 http://lists.wikimedia.org/pipermail/mediawiki-announce/2013-April/000129.html
+# CVE-2013-2114
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
@@ -34,6 +35,7 @@ MediaWiki 1.20:
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
     cve: CVE-2013-2031 CVE-2013-2032 http://lists.wikimedia.org/pipermail/mediawiki-announce/2013-April/000129.html 
     fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
@@ -41,6 +43,7 @@ MediaWiki 1.19:
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
     cve: CVE-2013-2031 CVE-2013-2032 http://lists.wikimedia.org/pipermail/mediawiki-announce/2013-April/000129.html
     fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
@@ -48,3 +51,4 @@ MediaWiki 1.18:
     regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18.x is end of life.'
     fingerprint: detect_general
+    post_processing: ['php5.fcgi']
