--- a/yamls/phpalbum.yml
+++ b/yamls/phpalbum.yml
@@ -7,3 +7,4 @@ phpAlbum:
     regexp: ['\$phpalbum_version.*?(?P<version>[0-9.]{1,})']
     cve: CVE-2011-4806 CVE-2011-4807 OSVDB:74980 OSVDB:21410
     fingerprint: detect_general
+    post_processing: ['php5.fcgi']
