--- a/yamls/phpbb3.yml
+++ b/yamls/phpbb3.yml
@@ -14,3 +14,4 @@ phpBB3:
     regexp: ['.*?PHPBB_VERSION.*?(?P<version>3[0-9.]{1,})']
     cve: CVE-2011-0544, SA42343
     fingerprint: detect_general
+    post_processing: ['php5.fcgi']
