--- a/yamls/cmsms.yml
+++ b/yamls/cmsms.yml
@@ -23,3 +23,4 @@ CMSMS:
     regexp: ['\$CMS_VERSION.*?(?P<version>[.0-9]{2,})']
     cve: 'CVE-2012-5450 CVE-2012-6064 http://osvdb.org/87235 SA51185 HTB23121 http://forum.cmsmadesimple.org/viewtopic.php?f=1&t=63545'
     fingerprint: detect_general
+    post_processing: ['php5.fcgi']
