--- a/yamls/e107.yml
+++ b/yamls/e107.yml
@@ -58,3 +58,4 @@ e107:
     regexp: ['.*?e107_version.*?(?P<version>[.0-9]{2,})']
     cve: CVE-2012-6434 http://osvdb.org/88908
     fingerprint: detect_general
+    post_processing: ['php5.fcgi']
