--- a/yamls/joomla-1.7.yml
+++ b/yamls/joomla-1.7.yml
@@ -18,3 +18,4 @@ Joomla 1.7:
     regexp: ['.*?RELEASE.*?(?P<version>1.[7,6])', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
     cve: CVE-2012-0819 http://osvdb.org/78517 http://developer.joomla.org/security/news/382-20120101-core-information-disclosure.html CVE-2012-0820 http://osvdb.org/78515 http://developer.joomla.org/security/news/383-20120102-core-xss-vulnerability.html CVE-2012-0821 http://osvdb.org/78518 http://developer.joomla.org/security/news/384-20120103-core-information-disclosure.html CVE-2012-0822 http://osvdb.org/78516 http://developer.joomla.org/security/news/385-20120104-core-xss-vulnerability.html
     fingerprint: detect_joomla
+    post_processing: ['php5.fcgi']
