--- a/yamls/mantisbt.yml
+++ b/yamls/mantisbt.yml
@@ -26,3 +26,4 @@ MantisBT:
     regexp: ['define.*?MANTIS_VERSION.*?(?P<version>[0-9.]+)']
     cve: CVE-2013-1883 http://osvdb.org/91618, CVE-2013-1930 http://osvdb.org/92024, CVE-2013-1931 http://osvdb.org/92025
     fingerprint: detect_general
+    post_processing: ['php5.fcgi']
