--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -107,3 +107,4 @@ WordPress:
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
     cve: http://wordpress.org/news/2013/01/wordpress-3-5-1/ CVE-2013-0235, CVE-2013-0236, CVE-2013-0237
     fingerprint: detect_general
+    post_processing: ['php5.fcgi']
